version/0.19/_sources/api/solver/_autosummary/settings/electrolyte_de.rst.txt
:orphan:

.. _electrolyte_de:

electrolyte_de
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.electrolyte_de.electrolyte_de
    :show-inheritance:

.. rubric:: Attributes

==================================   ===================================

Attribute                                                        Summary

==================================   ===================================
:ref:`method <method_4>`                 Select method for the property.

:ref:`value <value_1>`                                    'value' child.

:ref:`user_defined <user_defined>`                 'user_defined' child.

==================================   ===================================

.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`p2d_model_settings <p2d_model_settings>`       'p2d_model_settings' child.

==============================================   ===============================

